added code refactoring slider

--- a/index.html
+++ b/index.html
@@ -6,34 +6,396 @@
           content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Home</title>
+    <link rel='stylesheet' href='css/swiper-bundle.min.css'>
     <link rel='stylesheet' href='css/main.css'>
 </head>
 <body>
 
 <div class='wrapper'>
-    <section class='section_page1'>
-        <h1 class='section_page1_title'>
-            Find a partner in our locations!
-        </h1>
-        <div class='section_page1_phoneImg'>
-            <picture>
-                <img src='img/honeMap.png' alt='Map'>
-            </picture>
+
+    <!-- Slider main container -->
+    <div class="swiper page_slider">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+                <section class='section_page1'>
+                    <h1 class='section_page1_title'>
+                        Find a partner in our locations!
+                    </h1>
+                    <div class='section_page1_phoneImg'>
+                        <picture>
+                            <img src='img/honeMap.png' alt='Map'>
+                        </picture>
+                    </div>
+
+                    <h2 class='section_page1_title2'>
+                        <span>CHAT WHILE YOU</span>
+                        <span>SEE each other</span>
+                    </h2>
+
+                    <a href='#' class='section_page1_btn'>
+                        GET STARTED >>
+                    </a>
+
+                </section>
+            </div>
+            <div class="swiper-slide mob_remove">
+                <section class='section_page2'>
+                    <div class='section_page2_row1'>
+                        <div class='page2_row1_card'>
+                            <h2 class='page2_row1_cardTitle'>
+                                Log In
+                            </h2>
+                            <div class='page2_row1_cardImg'>
+                                <picture>
+                                    <img src='img/page2_cardImg1.png' alt='image'>
+                                </picture>
+                            </div>
+                        </div>
+                        <div class='page2_row1_card'>
+                            <h2 class='page2_row1_cardTitle'>
+                                Chat
+                            </h2>
+                            <div class='page2_row1_cardImg'>
+                                <picture>
+                                    <img src='img/page2_cardImg2.png' alt='image'>
+                                </picture>
+                            </div>
+                        </div>
+                        <div class='page2_row1_card'>
+                            <h2 class='page2_row1_cardTitle'>
+                                Date
+                            </h2>
+                            <div class='page2_row1_cardImg'>
+                                <picture>
+                                    <img src='img/page2_cardImg3.png' alt='image'>
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='section_page2_row2'>
+                        <div class='badge_page badge_red'>Quick and simple log in</div>
+                        <div class='badge_page badge_yellow'>No registration needed!</div>
+                    </div>
+
+                    <div class='section_page2_row3'>
+                        <ul class='page2_row3_coll'>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon1.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at the park</div>
+                            </li>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon2.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at work</div>
+                            </li>
+                        </ul>
+                        <ul class='page2_row3_coll'>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon3.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at the Bar</div>
+                            </li>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon4.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at THE GYM</div>
+                            </li>
+                        </ul>
+                        <ul class='page2_row3_coll'>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon5.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at a café</div>
+                            </li>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon6.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at THE restaurant</div>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+
+            <div class="swiper-slide desc_remove">
+                <section class='section_page2'>
+                    <div class='section_page2_row1'>
+                        <div class='page2_row1_card'>
+                            <h2 class='page2_row1_cardTitle'>
+                                Log In
+                            </h2>
+                            <div class='page2_row1_cardImg'>
+                                <picture>
+                                    <img src='img/page2_cardImg1.png' alt='image'>
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="swiper-slide desc_remove">
+                <section class='section_page2'>
+                    <div class='section_page2_row1'>
+                        <div class='page2_row1_card'>
+                            <h2 class='page2_row1_cardTitle'>
+                                Chat
+                            </h2>
+                            <div class='page2_row1_cardImg'>
+                                <picture>
+                                    <img src='img/page2_cardImg2.png' alt='image'>
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="swiper-slide desc_remove">
+                <section class='section_page2'>
+                    <div class='section_page2_row1'>
+                        <div class='page2_row1_card'>
+                            <h2 class='page2_row1_cardTitle'>
+                                Date
+                            </h2>
+                            <div class='page2_row1_cardImg'>
+                                <picture>
+                                    <img src='img/page2_cardImg3.png' alt='image'>
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+            <div class="swiper-slide desc_remove">
+                <section class='section_page2'>
+                    <div class='section_page2_row2'>
+                        <div class='badge_page badge_red'>Quick and simple log in</div>
+                        <div class='badge_page badge_yellow'>No registration needed!</div>
+                    </div>
+
+                    <div class='section_page2_row3'>
+                        <ul class='page2_row3_coll'>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon1.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at the park</div>
+                            </li>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon2.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at work</div>
+                            </li>
+                        </ul>
+                        <ul class='page2_row3_coll'>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon3.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at the Bar</div>
+                            </li>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon4.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at THE GYM</div>
+                            </li>
+                        </ul>
+                        <ul class='page2_row3_coll'>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon5.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at a café</div>
+                            </li>
+                            <li>
+                                <div class='row3_coll_icon'>
+                                    <picture>
+                                        <img src='img/icon/row3_coll_icon6.png' alt='icon'>
+                                    </picture>
+                                </div>
+                                <div class='row3_coll_text'>chat at THE restaurant</div>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+
+            <div class="swiper-slide mob_remove">
+                <section class='section_page3'>
+                    <div class='section_page3_bg'>
+                        <picture>
+                            <img src='img/section_page3_bg.jpg' alt='image background'>
+                        </picture>
+                    </div>
+
+                    <div class='person_block'>
+                        <div class='person_block_bgM'>
+                            <img src='img/section_page3_bg1m.jpg' alt='image'>
+                        </div>
+                        <div class='page3_blockText'>
+                            Hi! How are you doing?
+                        </div>
+                    </div>
+
+                    <div class='person_block'>
+                        <div class='person_block_bgM'>
+                            <img src='img/section_page3_bg2m.jpg' alt='image'>
+                        </div>
+                        <div class='page3_blockText page3_blockText2'>
+                            Hi! Everything is great! Let's get to know each other, shall we? It's my first time here.
+                        </div>
+                    </div>
+
+                </section>
+            </div>
+            <div class="swiper-slide desc_remove">
+                <section class='section_page3'>
+                    <div class='person_block'>
+                        <div class='person_block_bgM'>
+                            <img src='img/section_page3_bg1m.jpg' alt='image'>
+                        </div>
+                        <div class='page3_blockText'>
+                            Hi! How are you doing?
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="swiper-slide desc_remove">
+                <section class='section_page3'>
+                    <div class='person_block'>
+                        <div class='person_block_bgM'>
+                            <img src='img/section_page3_bg2m.jpg' alt='image'>
+                        </div>
+                        <div class='page3_blockText page3_blockText2'>
+                            Hi! Everything is great! Let's get to know each other, shall we? It's my first time here.
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+            <div class="swiper-slide">
+                <section class='section_page4'>
+                    <div class='page4_row1'>
+                        <div class='page4_row1_text'>
+                            <div class='page4_row1_text_title'>
+                                <picture>
+                                    <img src='img/page4_logo.png' alt='logo'>
+                                </picture>
+                            </div>
+
+                            <h2 class='page4_row1_text_subTitle'>
+                                Start meeting In real time
+                            </h2>
+
+                            <div class='page4_btnWr'>
+                                <a href='#' class='page4_btn'>
+                                    Download Now!
+                                </a>
+
+                                <div class='page4_downloadIcon'>
+                                    <a href='#' class='downloadIconWr'>
+                                        <picture>
+                                            <img src='img/icon/app_store_icon.png' alt='APP STORE'>
+                                        </picture>
+                                    </a>
+                                    <a href='#' class='downloadIconWr'>
+                                        <picture>
+                                            <img src='img/icon/playstore_icon.png' alt='APP STORE'>
+                                        </picture>
+                                    </a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class='page4_row1_img'>
+                            <picture>
+                                <img src='img/page4_phone_img.png' alt='image'>
+                            </picture>
+                        </div>
+                    </div>
+                    <div class='page4_row2'>
+                        <h2 class='page4_row2_title'>
+                            Social
+                        </h2>
+
+                        <ul>
+                            <li>
+                                <a href='#'>
+                                    <img src='img/icon/instagram.png' alt='instagram'>
+                                </a>
+                            </li>
+                            <li>
+                                <a href='#'>
+                                    <img src='img/icon/facebook.png' alt='facebook'>
+                                </a>
+                            </li>
+                            <li>
+                                <a href='#'>
+                                    <img src='img/icon/linkedin.png' alt='linkedin'>
+                                </a>
+                            </li>
+                            <li>
+                                <a href='#'>
+                                    <img src='img/icon/tiktok.png' alt='tiktok'>
+                                </a>
+                            </li>
+                            <li>
+                                <a href='#'>
+                                    <img src='img/icon/twitter.png' alt='twitter'>
+                                </a>
+                            </li>
+                            <li>
+                                <a href='#'>
+                                    <img src='img/icon/youtube.png' alt='youtube'>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+
         </div>
+    </div>
 
-        <h2 class='section_page1_title2'>
-            <span>CHAT WHILE YOU</span>
-            <span>SEE each other</span>
-        </h2>
 
-        <a href='#' class='section_page1_btn'>
-            GET STARTED >>
-        </a>
-
-    </section>
 </div>
 
-
+<script src='js/swiper-bundle.min.js'></script>
 <script src='js/main.js'></script>
 </body>
 </html>
