add viewport height

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel='stylesheet' href='css/swiper-bundle.min.css'>
     <link rel='stylesheet' href='css/main.css'>
 </head>
@@ -140,7 +141,7 @@
             </div>
 
             <div class="swiper-slide desc_remove">
-                <section class='section_page2'>
+                <section class='section_page2 section_page2v1'>
                     <div class='section_page2_row1'>
                         <div class='page2_row1_card'>
                             <h2 class='page2_row1_cardTitle'>
@@ -156,7 +157,7 @@
                 </section>
             </div>
             <div class="swiper-slide desc_remove">
-                <section class='section_page2'>
+                <section class='section_page2 section_page2v2'>
                     <div class='section_page2_row1'>
                         <div class='page2_row1_card'>
                             <h2 class='page2_row1_cardTitle'>
@@ -172,7 +173,7 @@
                 </section>
             </div>
             <div class="swiper-slide desc_remove">
-                <section class='section_page2'>
+                <section class='section_page2 section_page2v3'>
                     <div class='section_page2_row1'>
                         <div class='page2_row1_card'>
                             <h2 class='page2_row1_cardTitle'>
