--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="img/favicon.jpg">
     <link rel='stylesheet' href='css/swiper-bundle.min.css'>
     <link rel='stylesheet' href='css/main.css'>
 </head>
