add btn next slide add link for download and refactor mob version 4 slide

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                         <span>SEE each other</span>
                     </h2>
 
-                    <a href='#' class='section_page1_btn'>
+                    <div class='section_page1_btn'>
                         GET STARTED >>
-                    </a>
+                    </div>
 
                 </section>
             </div>
@@ -328,14 +328,14 @@
                                 </a>
 
                                 <div class='page4_downloadIcon'>
-                                    <a href='#' class='downloadIconWr'>
+                                    <a href='https://apps.apple.com/il/app/real-life-dating/id1020951006' class='downloadIconWr' target='_blank'>
                                         <picture>
                                             <img src='img/icon/app_store_icon.png' alt='APP STORE'>
                                         </picture>
                                     </a>
-                                    <a href='#' class='downloadIconWr'>
+                                    <a href='https://play.google.com/store/apps/details?id=com.dating.reallife' class='downloadIconWr' target='_blank'>
                                         <picture>
-                                            <img src='img/icon/playstore_icon.png' alt='APP STORE'>
+                                            <img src='img/icon/playstore_icon.png' alt='PLAY STORE'>
                                         </picture>
                                     </a>
                                 </div>
@@ -356,32 +356,32 @@
 
                         <ul>
                             <li>
-                                <a href='#'>
+                                <a href='#' target='_blank'>
                                     <img src='img/icon/instagram.png' alt='instagram'>
                                 </a>
                             </li>
                             <li>
-                                <a href='#'>
+                                <a href='#' target='_blank'>
                                     <img src='img/icon/facebook.png' alt='facebook'>
                                 </a>
                             </li>
                             <li>
-                                <a href='#'>
+                                <a href='#' target='_blank'>
                                     <img src='img/icon/linkedin.png' alt='linkedin'>
                                 </a>
                             </li>
                             <li>
-                                <a href='#'>
+                                <a href='#' target='_blank'>
                                     <img src='img/icon/tiktok.png' alt='tiktok'>
                                 </a>
                             </li>
                             <li>
-                                <a href='#'>
+                                <a href='#' target='_blank'>
                                     <img src='img/icon/twitter.png' alt='twitter'>
                                 </a>
                             </li>
                             <li>
-                                <a href='#'>
+                                <a href='#' target='_blank'>
                                     <img src='img/icon/youtube.png' alt='youtube'>
                                 </a>
                             </li>
