add effect hover for link download

--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
                             </h2>
 
                             <div class='page4_btnWr'>
-                                <a href='#' class='page4_btn'>
+                                <div class='page4_btn'>
                                     Download Now!
-                                </a>
+                                </div>
 
                                 <div class='page4_downloadIcon'>
                                     <a href='https://apps.apple.com/il/app/real-life-dating/id1020951006' class='downloadIconWr' target='_blank'>
